Busy switching how publications are included

--- a/_bibliography/publications.html
+++ b/_bibliography/publications.html
@@ -1,18 +1,4 @@
----
-title: Publications/CV
-classes: wide
-header:
-  overlay_color: "#000"
-  overlay_filter: "0.5"
-  overlay_image: /assets/images/sevenGables.jpg
-excerpt: "<br/><br/><br/><br/>"
----
-
-# Curriculum Vitae
-[Download](/assets/documents/GardnerMH_CV.pdf) pdf of complete CV
-
-# Publications
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -50,5 +36,3 @@ excerpt: "<br/><br/><br/><br/>"
 </div>
 </body>
 </html>
-
-# Published Software
