Updates to publications format

--- a/_bibliography/publications.html
+++ b/_bibliography/publications.html
@@ -9,29 +9,29 @@
 </head>
 <body>
 <div id="refs" class="references">
-<div id="ref-Geer14">
-<p>Bray, Jonathan, Julien Cohen-Waeber, Tim Dawson, Tadahiro Kishida, and Nicholas Sitar. 2014. “Geotechnical Engineering Reconnaissance of the August 24, 2014 M6 South Napa Earthquake.” Technical Report. Geotechnical Extreme Events Reconnaissance Association. doi:<a href="https://doi.org/&lt;a href=&quot;https://doi.org/10.13140/2.1.1094.7844&quot;&gt;10.13140/2.1.1094.7844&lt;/a&gt;,  (\emph{Contributing Author in Sections 5 and 6})">&lt;a href=&quot;https://doi.org/10.13140/2.1.1094.7844&quot;&gt;10.13140/2.1.1094.7844&lt;/a&gt;,  (\emph{Contributing Author in Sections 5 and 6})</a>.</p>
-</div>
-<div id="ref-simcenter2019state">
-<p>Deierlein, Gregory G., and Adam Zsarnóczay. 2019. “State-of-Art in Computational Simulation for Natural Hazards Engineering.” Technical Report. doi:<a href="https://doi.org/&lt;a href=&quot;https://doi.org/10.5281/zenodo.2579582&quot;&gt;10.5281/zenodo.2579582&lt;/a&gt;, (\emph{Contributing Author in Sections 1.2, 1.3 and 1.4})">&lt;a href=&quot;https://doi.org/10.5281/zenodo.2579582&quot;&gt;10.5281/zenodo.2579582&lt;/a&gt;, (\emph{Contributing Author in Sections 1.2, 1.3 and 1.4})</a>.</p>
-</div>
-<div id="ref-Gardner18">
-<p>Gardner, Michael. 2018. “Development of a Coupled 3-d Dem-Lbm Model for Simulation of Dynamic Rock-Fluid Interaction.” PhD thesis, University of California, Berkeley, &lt;a href=“https://escholarship.org/uc/item/5mh1c0pk”&gt;Available open access&lt;/a&gt;.</p>
-</div>
-<div id="ref-Gardner18ARMA">
-<p>Gardner, Michael, and Nicholas Sitar. 2018. “Modeling of Rock Scour Using Coupled 3-d Discrete Element and Lattice Boltzmann Methods.” Seattle, Washington: American Rock Mechanics Association, &lt;a href=“https://www.researchgate.net/publication/326733870_Modeling_of_Rock_Scour_using_Coupled_3-D_Discrete_Element_and_Lattice_Boltzmann_Methods”&gt;Available on ResearchGate&lt;/a&gt;.</p>
+<div id="ref-Gardner17">
+<p>1. M. Gardner, J. Kolb, N. Sitar, Parallel and scalable block system generation. <em>Computers and Geotechnics</em>. <strong>89</strong>, 168–178 (2017).</p>
 </div>
 <div id="ref-gardner2019coupled">
-<p>———. 2019. “Coupled Three-Dimensional Discrete Element-Lattice Boltzmann Methods for Fluid-Solid Interaction with Polyhedral Particles.” <em>International Journal for Numerical and Analytical Methods in Geomechanics</em> 0 (0). doi:<a href="https://doi.org/&lt;a href=&quot;https://doi.org/10.1002/nag.2972&quot;&gt;10.1002/nag.2972&lt;/a&gt;">&lt;a href=&quot;https://doi.org/10.1002/nag.2972&quot;&gt;10.1002/nag.2972&lt;/a&gt;</a>.</p>
+<p>2. M. Gardner, N. Sitar, Coupled three-dimensional discrete element-lattice boltzmann methods for fluid-solid interaction with polyhedral particles. <em>International Journal for Numerical and Analytical Methods in Geomechanics</em>. <strong>0</strong> (2019), doi:<a href="https://doi.org/10.1002/nag.2972">10.1002/nag.2972</a>.</p>
 </div>
 <div id="ref-gardner2019modeling">
-<p>———. Invited paper, 2019. “Modeling of Dynamic Rock–Fluid Interaction Using Coupled 3-d Discrete Element and Lattice Boltzmann Methods.” <em>Rock Mechanics and Rock Engineering</em>, May. doi:<a href="https://doi.org/&lt;a href=&quot;https://rdcu.be/bEN0d&quot;&gt;10.1007/s00603-019-01857-x&lt;/a&gt; (Online View)">&lt;a href=&quot;https://rdcu.be/bEN0d&quot;&gt;10.1007/s00603-019-01857-x&lt;/a&gt; (Online View)</a>.</p>
-</div>
-<div id="ref-Gardner17">
-<p>Gardner, Michael, John Kolb, and Nicholas Sitar. 2017. “Parallel and Scalable Block System Generation.” <em>Computers and Geotechnics</em> 89: 168–78. doi:<a href="https://doi.org/&lt;a href=&quot;https://www.researchgate.net/publication/316791916_Parallel_and_scalable_block_system_generation&quot;&gt;10.1016/j.compgeo.2017.05.001&lt;/a&gt;">&lt;a href=&quot;https://www.researchgate.net/publication/316791916_Parallel_and_scalable_block_system_generation&quot;&gt;10.1016/j.compgeo.2017.05.001&lt;/a&gt;</a>.</p>
+<p>3. M. Gardner, N. Sitar, Modeling of dynamic rock–fluid interaction using coupled 3-d discrete element and lattice boltzmann methods. <em>Rock Mechanics and Rock Engineering</em> (Invited paper, 2019), doi:<a href="https://doi.org/10.1007/s00603-019-01857-x">10.1007/s00603-019-01857-x</a>.</p>
 </div>
 <div id="ref-Zheng17">
-<p>Zheng, Fei, Yu-Yong Jiao, Michael Gardner, and Nicholas Sitar. 2017. “A Fast Direct Search Algorithm for Contact Detection of Convex Polygonal or Polyhedral Particles.” <em>Computers and Geotechnics</em> 87: 76–85. doi:<a href="https://doi.org/&lt;a href=&quot;https://doi.org/10.1016/j.compgeo.2017.02.001&quot;&gt;10.1016/j.compgeo.2017.02.001&lt;/a&gt;">&lt;a href=&quot;https://doi.org/10.1016/j.compgeo.2017.02.001&quot;&gt;10.1016/j.compgeo.2017.02.001&lt;/a&gt;</a>.</p>
+<p>4. F. Zheng, Y.-Y. Jiao, M. Gardner, N. Sitar, A fast direct search algorithm for contact detection of convex polygonal or polyhedral particles. <em>Computers and Geotechnics</em>. <strong>87</strong>, 76–85 (2017).</p>
+</div>
+<div id="ref-simcenter2019state">
+<p>5. G. G. Deierlein, A. Zsarnóczay, “State-of-art in computational simulation for natural hazards engineering” (Technical Report, 2019),, doi:<a href="https://doi.org/10.5281/zenodo.2579582)">10.5281/zenodo.2579582)</a>.</p>
+</div>
+<div id="ref-Geer14">
+<p>6. J. Bray, J. Cohen-Waeber, T. Dawson, T. Kishida, N. Sitar, “Geotechnical engineering reconnaissance of the august 24, 2014 m6 south napa earthquake” (Technical Report, Geotechnical Extreme Events Reconnaissance Association, 2014),, doi:<a href="https://doi.org/https://doi.org/10.13140/2.1.1094.7844">https://doi.org/10.13140/2.1.1094.7844</a>.</p>
+</div>
+<div id="ref-Gardner18ARMA">
+<p>7. M. Gardner, N. Sitar, Modeling of rock scour using coupled 3-d discrete element and lattice boltzmann methods (2018), (available at <a href="https://www.researchgate.net/publication/326733870_Modeling_of_Rock_Scour_using_Coupled_3-D_Discrete_Element_and_Lattice_Boltzmann_Methods" class="uri">https://www.researchgate.net/publication/326733870_Modeling_of_Rock_Scour_using_Coupled_3-D_Discrete_Element_and_Lattice_Boltzmann_Methods</a>).</p>
+</div>
+<div id="ref-Gardner18">
+<p>8. M. Gardner, thesis, University of California, Berkeley (2018).</p>
 </div>
 </div>
 </body>
